# dupfinder

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/dupfinder/: __init__.py
