[metadata]
name = dupfinder
version = 0.1.0
author = Nikolaos Chatzikonstantinou <nchatz314@gmail.com>
maintainer = Nikolaos Chatzikonstantinou
maintainer_email = nchatz314@gmail.com
description = Find duplicate files.
license_files = COPYING
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dupfinder = dupfinder:main
